deployments/kustomize/api/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-counter-online
  labels:
    app: go-counter-online
    service: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-counter-online
      service: api
  template:
    metadata:
      labels:
        app: go-counter-online
        service: api
    spec:
      serviceAccountName: go-counter-online-sa
      containers:
      - name: go-counter-online
        image: go-counter-online:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "go-counter-online-deployment-aws-secrets"
