deployments/kustomize/api/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-counter-online
  labels:
    app: go-counter-online
    service: api
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: go-counter-online
    service: api
